# Tetrahedralization

./: CMakeLists.txt  README.md
core/: CMakeLists.txt
core/cellPicker/include/: cellPicker.h
core/demo/: CMakeLists.txt  by_loading.cpp
core/demo/by_infile_method/: by_infile_method.cpp
core/demo/by_loading/: by_loading.cpp
core/strutil/src/: strutil.cpp
data/: nodes.xyz  tetgen
